<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/container_btn_save">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:orientation="vertical"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_nama_lengkap"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_lengkap"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_alamat"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_no_hp"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_hp"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_perumahan"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary">

                <AutoCompleteTextView
                    android:id="@+id/edt_perumahan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/perumahan"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_tipe_rumah"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tipe_rumah"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/colorBackgroundSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_dp"
                    style="@style/BaseTheme.EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dp"
                    android:inputType="text"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium"
                android:layout_marginTop="@dimen/small"
                android:text="@string/upload_bukti_dp"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_bukti_dp"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="@dimen/medium"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/upload_bukti_dp"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/dummy_rumah" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundSecondary"
        app:cardElevation="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.ridhoafnidev.project.core_resource.components.BaseButton
            android:id="@+id/btn_submit"
            style="@style/BaseTheme.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:layout_marginHorizontal="@dimen/small"
            android:text="@string/checkout"
            android:textAllCaps="true" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>